# snake-ai-pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: agent.py  game.py  model.py  snake_env.py  snake_env_human.py  snake_game_human.py
src/snake_ai_pytorch/: agent.py  game.py  snake_env.py  snake_env_human.py  snake_game_human.py
src/snake_ai_pytorch/controllers/: enjoy.py  enjoy_sb3.py  play.py  train.py  train_sb3.py
src/snake_ai_pytorch/models/: __init__.py  agent.py  collision.py  direction.py  dueling_qnet.py  linear_qnet.py  point.py  renderer.py  sb3_agent.py  snake_env.py  snake_game.py  snake_game_ai.py  snake_game_human.py
src/snake_ai_pytorch/views/: __init__.py  progress_graph.py  visual_configuration.py
